# astrea

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  README_ZH.md
.github/workflows/: release.yml
astrea-macro/: Cargo.toml
astrea-macro/src/: codegen.rs  lib.rs  parser.rs  route.rs  scanner.rs  utils.rs
astrea-macro/src/codegen/: mod.rs  openapi.rs  router.rs  scope.rs
astrea-macro/src/openapi/: doc.rs  helpers.rs  mod.rs  visitor.rs
basic-app/: Cargo.toml
basic-app/routes/: index.get.rs
basic-app/routes/users/: [id].get.rs  index.get.rs
basic-app/src/: main.rs
basic-app/src/routes/posts/: index.post.rs
benches/: README.md  comprehensive.rs  error.rs  event.rs  extract.rs  response.rs  validate.sh
examples/full-demo/: Cargo.toml
examples/full-demo/src/: main.rs
examples/full-demo/src/routes/: _middleware.rs  index.get.rs
examples/full-demo/src/routes/api/: _middleware.rs  users.get.rs  users.post.rs
examples/full-demo/src/routes/api/users/: [id].delete.rs  [id].get.rs  [id].put.rs
examples/full-demo/src/routes/posts/: [...slug].get.rs
src/: error.rs  event.rs  extract.rs  lib.rs  middleware.rs  response.rs  router.rs
src/event/: inner.rs  mod.rs  parse.rs
src/extract/: body.rs  headers.rs  metadata.rs  mod.rs  params.rs  query.rs  state.rs  tests.rs
src/openapi/: mod.rs  registry.rs  spec.rs  swagger.rs  types.rs
src/response/: builders.rs  mod.rs  stream.rs
tests/: TESTING.md  error_tests.rs  event_tests.rs  extract_tests.rs  integration_tests.rs  macro_test.rs  openapi_tests.rs  response_tests.rs
