[workspace]
members = [".", "basic-app"]
resolver = "2"

[package]
name = "astrea"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
astrea-macro = { path = "astrea-macro" }
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11.1"
http = "1.4.0"
http-body = "1.0.1"
hyper = "1.8.1"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1"
tower-http = { version = "0.6.8", features = [
    "cors",
    "trace",
    "compression-br",
    "compression-gzip",
] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "event"
harness = false

[[bench]]
name = "response"
harness = false

[[bench]]
name = "extract"
harness = false

[[bench]]
name = "error"
harness = false

[[bench]]
name = "comprehensive"
harness = false
