[package]
name = "astrea-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for Astrea - file-system based routing framework"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/astrea-macro"
readme = "../README.md"
keywords = ["axum", "router", "macro", "web", "filesystem"]
categories = ["development-tools::procedural-macro-helpers", "web-programming"]
rust-version = "1.85"

[lib]
proc-macro = true

[features]
openapi = ["syn/visit", "dep:phf"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
phf = { version = "0.13.1", features = ["macros"], optional = true }
