[workspace]
[package]
name = "full-demo"
edition = "2024"

[dependencies]
# 从本地导入 astrea，并启用 openapi 特性
astrea = { path = "../.." , features = ["openapi"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "full-demo"
path = "src/main.rs"